--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,35 @@ ol {
   padding-left: 0;
 }
 
+img {
+  display: block;
+  min-width: 100%;
+  height: auto;
+  width: 100%;
+}
+
+.container {
+  width: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+}
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
+}
+
 :root {
   --primery-text-color: #212121;
   --additional-text-color: #ffffff;
@@ -311,13 +340,6 @@ ol {
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
-}
-
-.container {
-  width: 100%;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin: 0 auto;
 }
 
 .backdrop {
@@ -669,12 +691,19 @@ ol {
 
 /* -==================== our-features (текст під банером) ==================== */
 .our-features {
-  padding-top: 94px;
+  /*   padding: 94px 0; */
+  padding: 60px 0;
+}
+@media screen and (min-width: 1200px) {
+  .our-features {
+    padding: 94px;
+  }
 }
 
 .our-features-list {
   list-style: none;
   display: flex;
+  flex-wrap: wrap;
   gap: 30px;
 }
 
@@ -682,9 +711,19 @@ ol {
   /*   flex-basis: calc((100% - 90px) / 4); */
   width: 100%;
 }
+@media screen and (min-width: 768px) {
+  .our-features-group {
+    flex-basis: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .our-features-group {
+    flex-basis: calc((100% - 90px) / 4);
+  }
+}
 
 .our-icons-group {
-  width: 270px;
+  width: 100%;
   height: 120px;
   border-radius: 4px;
   background-color: var(--background-color-special);
