--- a/sass/layouts/_our-features.scss
+++ b/sass/layouts/_our-features.scss
@@ -1,22 +1,34 @@
 /* -==================== our-features (текст під банером) ==================== */
 .our-features {
-  padding-top: 94px;
+  /*   padding: 94px 0; */
+  padding: 60px 0;
+
+  @media screen and(min-width: 1200px) {
+    padding: 94px;
+  }
 }
 
 .our-features-list {
   list-style: none;
   display: flex;
-  
+  flex-wrap: wrap;
   gap: 30px;
 }
 
 .our-features-group {
   /*   flex-basis: calc((100% - 90px) / 4); */
   width: 100%;
+  @media screen and(min-width: 768px) {
+    flex-basis: calc((100% - 30px) / 2);
+  }
+
+  @media screen and(min-width: 1200px) {
+    flex-basis: calc((100% - 90px) / 4);
+  }
 }
 
 .our-icons-group {
-  width: 270px;
+  width: 100%;
   height: 120px;
   border-radius: 4px;
   background-color: var(--background-color-special);
