--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import "./base/common";
 @import "./base/reset";
+@import "./components/container";
 
 @import "./utils/variables";
 @import "./utils/hidden";
