--- a/sass/layouts/_our-team.scss
+++ b/sass/layouts/_our-team.scss
@@ -1,11 +1,18 @@
 .our-team {
   background-color: var(--background-color-special);
+
+  padding: 60px 0;
+
+  @media screen and(min-width: 1200px) {
+    padding-top: 94px;
+  }
 }
 
 /* .our-team-main-title {} */
 
 .our-team-group {
   display: flex;
+  flex-wrap: wrap;
   list-style: none;
   gap: 30px;
 }
@@ -13,10 +20,19 @@
 .our-team-group__list {
   margin: 0 auto;
   background-color: var(--additional-text-color);
-  width: calc((100% - 90px) / 4);
+/*   width: calc((100% - 90px) / 4); */
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+
+    width: 100%;
+  @media screen and(min-width: 768px) {
+    flex-basis: calc((100% - 30px) / 2);
+  }
+
+  @media screen and(min-width: 1200px) {
+    flex-basis: calc((100% - 90px) / 4);
+  }
 }
 
 .our-team-group__img {
