--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -60,6 +60,10 @@
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+
+    @media screen and(max-width: 768px) {
+    text-align: center;
+  }
 }
 
 .basement__subtitle {
