--- a/css/main.css
+++ b/css/main.css
@@ -749,18 +749,47 @@ img {
   margin-bottom: 10px;
 }
 
+.img-section {
+  padding: 60px 0;
+}
+@media screen and (min-width: 1200px) {
+  .img-section {
+    padding-top: 94px;
+  }
+}
+
 .img-section__picture {
   display: block;
 }
 
+/*  налаштування списку (list options) */
+.img-section__group {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  gap: 30px;
+}
+
 .img-section__list {
   position: relative;
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .img-section__list {
+    flex-basis: calc((100% - 60px) / 3);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .img-section__list {
+    flex-basis: calc((100% - 60px) / 3);
+  }
 }
 
 .img-section__position > .img-section__label {
   position: absolute;
   bottom: 0;
   margin: 0;
+  width: 100%;
 }
 
 .img-section__label {
@@ -770,13 +799,6 @@ img {
   background-color: rgba(47, 48, 58, 0.8);
   height: 70px;
   width: 370px;
-}
-
-/*  налаштування списку (list options) */
-.img-section__group {
-  display: flex;
-  list-style: none;
-  gap: 30px;
 }
 
 /* .img-section-picture{} */
