--- a/css/main.css
+++ b/css/main.css
@@ -851,14 +851,23 @@ img {
   margin-bottom: 10px;
 }
 
+.partners {
+  padding: 60px 0;
+}
+@media screen and (min-width: 1200px) {
+  .partners {
+    padding-top: 94px;
+  }
+}
+
 .partners__list {
   list-style: none;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   gap: 30px;
 }
 
-/* .partners__item{} */
 .partners__link {
   display: flex;
   justify-content: center;
@@ -869,10 +878,21 @@ img {
   width: 170px;
   height: 92px;
   fill: var(--social-main-color);
+  flex-basis: calc((100% - 30px) / 2);
 }
 .partners__link:hover, .partners__link:focus {
   fill: var(--text-hover-color);
   border: 1px solid var(--text-hover-color);
+}
+@media screen and (min-width: 768px) {
+  .partners__link {
+    flex-basis: calc((100% - 60px) / 3);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .partners__link {
+    flex-basis: calc((100% - 120px) / 6);
+  }
 }
 
 /* .partners__icon{} */
