--- a/sass/layouts/_partners.scss
+++ b/sass/layouts/_partners.scss
@@ -1,11 +1,18 @@
+.partners {
+  padding: 60px 0;
+
+  @media screen and(min-width: 1200px) {
+    padding-top: 94px;
+  }
+}
+
 .partners__list {
   list-style: none;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   gap: 30px;
 }
-
-/* .partners__item{} */
 
 .partners__link {
   display: flex;
@@ -22,6 +29,16 @@
   &:focus {
     fill: var(--text-hover-color);
     border: 1px solid var(--text-hover-color);
+  }
+
+    flex-basis: calc((100% - 30px) / 2);
+
+  @media screen and(min-width: 768px) {
+    flex-basis: calc((100% - 60px) / 3);
+  }
+
+  @media screen and(min-width: 1200px) {
+    flex-basis: calc((100% - 120px) / 6);
   }
 }
 
