--- a/sass/layouts/_portfolio-btn.scss
+++ b/sass/layouts/_portfolio-btn.scss
@@ -1,10 +1,24 @@
+.section {
+  padding: 60px 0;
+
+  @media screen and(min-width: 1200px) {
+    padding-top: 94px;
+  }
+}
+
 /* button list options (налаштування списка кнопок) */
 .portfolio-btn__list {
   list-style: none;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   gap: 8px;
   margin-bottom: 50px;
+
+    @media screen and(min-width: 768px) {
+    flex-basis: calc((100% - 32px) / 5);
+  }
+
 }
 
 /* .portfolio-btn__item {} */
