--- a/sass/layouts/_portfolio-list.scss
+++ b/sass/layouts/_portfolio-list.scss
@@ -6,7 +6,20 @@
 }
 
 .projects__item {
-  flex-basis: calc((100% - 60px) / 3);
+  /*   flex-basis: calc((100% - 60px) / 3); */
+  width: 100%;
+  
+  @media screen and(min-width: 480px) {
+    width: 480px;
+  }
+
+  @media screen and(min-width: 768px) {
+    flex-basis: calc((100% - 30px) / 2);
+  }
+
+  @media screen and(min-width: 1200px) {
+    flex-basis: calc((100% - 60px) / 3);
+  }
 }
 
 .projects__link {
