--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -6,12 +6,24 @@
       rgba(47, 48, 58, 0.4)
     ),
     url(../images/hero-bg.jpeg);
-  background-size: 1600px;
   background-repeat: no-repeat;
   background-position: center;
-  /*     background-size: cover; */
-  padding-top: 200px;
-  padding-bottom: 200px;
+  background-size: cover;
+  /*   padding-top: 200px;
+  padding-bottom: 200px; */
+
+  padding: 118px 0;
+  @media screen and(min-width: 480px) {
+  }
+
+  @media screen and(min-width: 768px) {
+  }
+
+  @media screen and(min-width: 1200px) {
+    min-width: 1200px;
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
 }
 
 /* .hero-container{} */
