--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -29,6 +29,11 @@
 
 .logo-basement {
   display: block;
+  text-align: center;
   padding: 0;
+
+  @media screen and(min-width: 1200px) {
+    text-align: left;
+  }
 }
 
