--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -11,7 +11,22 @@
 
 .basement-container {
   display: flex;
-  align-items: baseline;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 60px;
+
+  @media screen and(min-width: 768px) {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  @media screen and(min-width: 1200px) {
+    flex-direction: row;
+    align-items: baseline;
+    gap: 0;
+  }
+  
 }
 
 /* footer list options (налаштування списку в підвалі) */
@@ -21,7 +36,12 @@
 
 .basement-contacts__list {
   display: inline;
+  text-align: center;
   list-style: none;
+
+  @media screen and(min-width: 1200px) {
+    text-align: left;
+  }
 }
 
 .basement-contacts__item {
@@ -39,7 +59,10 @@
   display: block;
   width: 206px;
   height: 80px;
-  margin-left: 70px;
+
+  @media screen and(min-width: 1200px) {
+    margin-left: 70px;
+  }
 }
 
 // *- налаштування соц мереж в social.scss //
@@ -47,31 +70,56 @@
 // !- footer form  - basement-submit - /
 
 .basement-submit {
-  display: block;
-  width: 570px;
-  height: 86px;
-  margin-left: 93px;
+  display: flex;
+  flex-direction: column;
+
+  @media screen and(min-width: 480px) {
+    width: 450px;
+  }
+
+  @media screen and(min-width: 1200px) {
+    width: 570px;
+    height: 86px;
+    margin-left: 93px;
+  }
 }
 
 .basement-submit__container {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+
+  @media screen and(min-width: 1200px) {
+    flex-direction: row;
+    gap: 0;
+  }
 }
 
-/* .basement-submit__label{} */
+.basement-submit__label {
+  display: flex;
+}
 
 .basement-submit__input {
   background-color: transparent;
 
   align-content: center;
   height: 50px;
-  width: 358px;
-
+  width: 300px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-  margin-right: 12px;
-
   padding-left: 16px;
+
+  @media screen and(min-width: 480px) {
+    width: 450px;
+  }
+
+  @media screen and(min-width: 1200px) {
+    width: 358px;
+    margin-right: 12px;
+  }
 }
 
 // footer button options
