--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -74,9 +74,10 @@
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  text-align: center;
 
-  @media screen and(max-width: 768px) {
-    text-align: center;
+  @media screen and(min-width: 1200px) {
+    text-align: left;
   }
 }
 
