--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -15,7 +15,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 528px;
+  width: 450px;
 
   background-color: var(--additional-text-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -23,6 +23,10 @@
   border-radius: 4px;
 
   padding: 40px;
+
+  @media screen and(min-width: 1200px) {
+    width: 528px;
+  }
 }
 
 .close-button {
