--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -65,6 +65,23 @@
   text-align: center;
 }
 
+/* title in section 3 and 4  */
+.img-section-title, 
+.our-team-title, 
+.partners-title{
+    color: var(--primery-text-color);
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 1.14;
+    text-align: center;
+    letter-spacing: 0.03em;
+
+    @media screen and(min-width: 1200px) {
+    font-size: 36px;
+    line-height: 1.16;
+  }
+}
+
 // * section font
 .our-features-title,
 .img-section__label,
@@ -105,6 +122,7 @@
   line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
+  
 }
 
 .our-team__text {
