--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -10,28 +10,9 @@
   justify-content: center;
 }
 
-.topbar-contacts__link {
-  display: flex;
-  align-items: center;
-}
-
 .topbar-navigation__list {
   list-style: none;
   display: flex;
-}
-
-.topbar-contacts__list {
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-}
-
-.topbar-navigation__list,
-.topbar-contacts__list {
-  @media screen and(min-width: 1200px) {
-    list-style: none;
-    flex-direction: row;
-  }
 }
 
 /* ---------------------------- header navigation ---------------------------- */
@@ -39,20 +20,35 @@
 .topbar-navigation {
   display: inline-flex;
   justify-content: center;
+  align-items: center;
+
+  @media screen and(min-width: 1200px) {
+    align-items: baseline;
+  }
 }
 
 .topbar-navigation__list {
   gap: 50px;
-  margin-left: 93px;
+  /* margin-left: 93px; */
+
+  @media screen and(min-width: 768px) {
+    margin-left: 88px;
+  }
+  @media screen and(min-width: 1200px) {
+    margin-left: 93px;
+  }
 }
 
 /* header navigation list options (налаштування списку навігації) */
 .topbar-navigation__group {
-  margin-top: 32px;
+  @media screen and(min-width: 1200px) {
+    margin-top: 32px;
+  }
 }
 
 /* header navigation link options (налаштування рядків списку навігації) */
 // *- налаштування тексту в variables.scss //
+
 .topbar-navigation__link {
   position: relative;
 
@@ -60,7 +56,6 @@
   &:focus {
     color: var(--text-hover-color);
   }
-
   @media screen and(min-width: 1200px) {
     padding-top: 32px;
     padding-bottom: 32px;
@@ -73,12 +68,16 @@
   &::after {
     content: "";
     position: absolute;
-    bottom: 1px;
-    left: -4px;
+    bottom: -31px;
+    left: -2px;
     width: 78px;
     height: 4px;
     background-color: var(--text-hover-color);
     border-radius: 2px;
+    @media screen and(min-width: 1200px) {
+      bottom: 3px;
+      left: -3px;
+    }
   }
 }
 
@@ -88,38 +87,65 @@
   &::after {
     content: "";
     position: absolute;
-    bottom: 1px;
-    left: -3px;
+    bottom: -31px;
+    left: -2px;
     width: 48px;
     height: 4px;
     background-color: var(--text-hover-color);
     border-radius: 2px;
+
+    @media screen and(min-width: 1200px) {
+      bottom: 3px;
+      left: -3px;
+    }
   }
 }
 
 /* ----------------------------- header contacts ----------------------------- */
-.topbar-contacts__list {
-  @media screen and(min-width: 1200px) {
-    gap: 50px;
-    margin-left: auto;
-  }
-}
 
 /* header contacts list options (налаштування списку контактів) */
 .topbar-contacts__group {
   display: flex;
+  /*   margin-left: 96px; */
+}
+
+.topbar-contacts__list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  gap: 10px;
+
+  @media screen and(min-width: 768px) {
+    margin-left: auto;
+  }
+
+  @media screen and(min-width: 1200px) {
+    flex-direction: row;
+    gap: 30px;
+    margin-left: auto;
+  }
 }
 
 /* header contacts color and hover (налаштування контактів в шапці) */
 .topbar-contacts__link {
-  padding-top: 32px;
-  padding-bottom: 32px;
+  display: flex;
+  align-items: center;
   fill: var(--paragraph-tex-color);
 
   &:focus,
   &:hover {
     color: var(--text-hover-color);
     fill: var(--text-hover-color);
+  }
+
+  @media screen and(min-width: 768px) {
+  }
+
+  @media screen and(min-width: 1200px) {
+    padding-top: 32px;
+    padding-bottom: 32px;
   }
 }
 
