--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -22,7 +22,7 @@
   justify-content: center;
   align-items: center;
 
-  @media screen and(min-width: 1200px) {
+  @include desktop {
     align-items: baseline;
   }
 }
@@ -31,17 +31,17 @@
   gap: 50px;
   /* margin-left: 93px; */
 
-  @media screen and(min-width: 768px) {
+  @include tablet {
     margin-left: 88px;
   }
-  @media screen and(min-width: 1200px) {
+  @include desktop {
     margin-left: 93px;
   }
 }
 
 /* header navigation list options (налаштування списку навігації) */
 .topbar-navigation__group {
-  @media screen and(min-width: 1200px) {
+  @include desktop {
     margin-top: 32px;
   }
 }
@@ -56,7 +56,7 @@
   &:focus {
     color: var(--text-hover-color);
   }
-  @media screen and(min-width: 1200px) {
+  @include desktop {
     padding-top: 32px;
     padding-bottom: 32px;
   }
@@ -74,7 +74,7 @@
     height: 4px;
     background-color: var(--text-hover-color);
     border-radius: 2px;
-    @media screen and(min-width: 1200px) {
+    @include desktop{
       bottom: 3px;
       left: -3px;
     }
@@ -94,7 +94,7 @@
     background-color: var(--text-hover-color);
     border-radius: 2px;
 
-    @media screen and(min-width: 1200px) {
+    @include desktop {
       bottom: 3px;
       left: -3px;
     }
@@ -117,11 +117,11 @@
 
   gap: 10px;
 
-  @media screen and(min-width: 768px) {
+  @include tablet {
     margin-left: auto;
   }
 
-  @media screen and(min-width: 1200px) {
+  @include desktop {
     flex-direction: row;
     gap: 30px;
     margin-left: auto;
@@ -140,10 +140,10 @@
     fill: var(--text-hover-color);
   }
 
-  @media screen and(min-width: 768px) {
+  @include tablet {
   }
 
-  @media screen and(min-width: 1200px) {
+  @include desktop {
     padding-top: 32px;
     padding-bottom: 32px;
   }
