--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 
 @import "./utils/variables";
 @import "./utils/hidden";
+@import "./utils/mixin";
 
 @import "./components/btn";
 @import "./components/logo";
