--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -41,12 +41,12 @@
   text-transform: uppercase;
 
 
-  @media screen and(min-width: 480px) {
+  @include mobile {
     width: 360px;
     height: 84px;
   }
 
-  @media screen and(min-width: 1200px) {
+  @include desktop {
     font-size: 44px;
     line-height: 1.36;
 
@@ -76,7 +76,7 @@
     text-align: center;
     letter-spacing: 0.03em;
 
-    @media screen and(min-width: 1200px) {
+    @include desktop {
     font-size: 36px;
     line-height: 1.16;
   }
@@ -93,7 +93,7 @@
   text-transform: uppercase;
   text-align: center;
 
-  @media screen and(min-width: 1200px) {
+  @include desktop {
     text-align: left;
   }
 }
