--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -13,7 +13,7 @@
   font-size: 24px;
   line-height: 1.16;
 
-  @media screen and(min-width: 1200px) {
+  @include desktop {
     font-size: 26px;
     line-height: 1.19;
   }
@@ -37,7 +37,7 @@
   text-align: center;
   padding: 0;
 
-  @media screen and(min-width: 1200px) {
+  @include desktop {
     text-align: left;
   }
 }
