--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -16,12 +16,12 @@
   justify-content: center;
   gap: 60px;
 
-  @media screen and(min-width: 768px) {
+  @include tablet {
     flex-direction: row;
     flex-wrap: wrap;
   }
 
-  @media screen and(min-width: 1200px) {
+  @include desktop {
     flex-direction: row;
     align-items: baseline;
     gap: 0;
@@ -39,7 +39,7 @@
   text-align: center;
   list-style: none;
 
-  @media screen and(min-width: 1200px) {
+  @include desktop {
     text-align: left;
   }
 }
@@ -60,7 +60,7 @@
   width: 206px;
   height: 80px;
 
-  @media screen and(min-width: 1200px) {
+  @include desktop {
     margin-left: 70px;
   }
 }
@@ -73,11 +73,11 @@
   display: flex;
   flex-direction: column;
 
-  @media screen and(min-width: 480px) {
+  @include mobile {
     width: 450px;
   }
 
-  @media screen and(min-width: 1200px) {
+  @include desktop {
     width: 570px;
     height: 86px;
     margin-left: 93px;
@@ -91,7 +91,7 @@
   align-items: center;
   gap: 30px;
 
-  @media screen and(min-width: 1200px) {
+  @include desktop {
     flex-direction: row;
     gap: 0;
   }
@@ -112,11 +112,11 @@
   border-radius: 4px;
   padding-left: 16px;
 
-  @media screen and(min-width: 480px) {
+  @include mobile {
     width: 450px;
   }
 
-  @media screen and(min-width: 1200px) {
+  @include desktop {
     width: 358px;
     margin-right: 12px;
   }
