--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -13,13 +13,13 @@
   padding-bottom: 200px; */
 
   padding: 118px 0;
-  @media screen and(min-width: 480px) {
+  @include mobile {
   }
 
-  @media screen and(min-width: 768px) {
+  @include tablet {
   }
 
-  @media screen and(min-width: 1200px) {
+  @include desktop {
     min-width: 1200px;
     padding-top: 200px;
     padding-bottom: 200px;
