--- a/sass/layouts/_img-section.scss
+++ b/sass/layouts/_img-section.scss
@@ -1,7 +1,7 @@
 .img-section {
   padding: 60px 0;
 
-  @media screen and(min-width: 1200px) {
+  @include desktop {
     padding-top: 94px;
   }
 }
@@ -21,11 +21,11 @@
 .img-section__list {
   position: relative;
   width: 100%;
-  @media screen and(min-width: 768px) {
+  @include tablet {
     flex-basis: calc((100% - 60px) / 3);
   }
 
-  @media screen and(min-width: 1200px) {
+  @include desktop {
     flex-basis: calc((100% - 60px) / 3);
   }
 }
