--- a/sass/layouts/_our-features.scss
+++ b/sass/layouts/_our-features.scss
@@ -3,7 +3,7 @@
   /*   padding: 94px 0; */
   padding: 60px 0;
 
-  @media screen and(min-width: 1200px) {
+  @include desktop {
     padding-top: 94px;
   }
 }
@@ -18,11 +18,11 @@
 .our-features-group {
   width: 100%;
 
-  @media screen and(min-width: 768px) {
+  @include tablet {
     flex-basis: calc((100% - 30px) / 2);
   }
 
-  @media screen and(min-width: 1200px) {
+  @include desktop {
     flex-basis: calc((100% - 90px) / 4);
   }
 }
