--- a/sass/layouts/_our-team.scss
+++ b/sass/layouts/_our-team.scss
@@ -3,7 +3,7 @@
 
   padding: 60px 0;
 
-  @media screen and(min-width: 1200px) {
+  @include desktop {
     padding-top: 94px;
   }
 }
@@ -26,11 +26,11 @@
   border-radius: 0px 0px 4px 4px;
 
     width: 100%;
-  @media screen and(min-width: 768px) {
+  @include tablet {
     flex-basis: calc((100% - 30px) / 2);
   }
 
-  @media screen and(min-width: 1200px) {
+  @include desktop {
     flex-basis: calc((100% - 90px) / 4);
   }
 }
