--- a/sass/layouts/_partners.scss
+++ b/sass/layouts/_partners.scss
@@ -33,11 +33,11 @@
 
     flex-basis: calc((100% - 30px) / 2);
 
-  @media screen and(min-width: 768px) {
+  @include tablet {
     flex-basis: calc((100% - 60px) / 3);
   }
 
-  @media screen and(min-width: 1200px) {
+  @include desktop {
     flex-basis: calc((100% - 120px) / 6);
   }
 }
