--- a/sass/layouts/_portfolio-btn.scss
+++ b/sass/layouts/_portfolio-btn.scss
@@ -1,7 +1,7 @@
 .section {
   padding: 60px 0;
 
-  @media screen and(min-width: 1200px) {
+  @include desktop {
     padding-top: 94px;
   }
 }
@@ -15,7 +15,7 @@
   gap: 8px;
   margin-bottom: 50px;
 
-    @media screen and(min-width: 768px) {
+    @include tablet {
     flex-basis: calc((100% - 32px) / 5);
   }
 
