--- a/sass/layouts/_portfolio-list.scss
+++ b/sass/layouts/_portfolio-list.scss
@@ -9,15 +9,15 @@
   /*   flex-basis: calc((100% - 60px) / 3); */
   width: 100%;
   
-  @media screen and(min-width: 480px) {
+  @include mobile {
     width: 480px;
   }
 
-  @media screen and(min-width: 768px) {
+  @include tablet {
     flex-basis: calc((100% - 30px) / 2);
   }
 
-  @media screen and(min-width: 1200px) {
+  @include desktop {
     flex-basis: calc((100% - 60px) / 3);
   }
 }
