--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,7 @@
   --background-color-additional: #2f303a;
   --background-color-special: #f5f4fa;
   --social-main-color: #afb1b8;
+  --bg-gradient: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
 }
 
 .hover-transition {
@@ -620,6 +621,12 @@ img {
 /* header navigation options (налаштування шапки) */
 .topbar {
   border-bottom: 1px solid #ececec;
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .topbar {
+    display: contents;
+  }
 }
 
 .topbar-flex {
@@ -772,19 +779,38 @@ img {
 
 .hero {
   background-color: var(--background-color-additional);
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg.jpeg);
+  background-image: var(--bg-gradient), url(../images/hero-mobile.jpeg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  /*   padding-top: 200px;
-  padding-bottom: 200px; */
-  padding: 118px 0;
+  padding: 118px 60px;
+}
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero {
+    background-image: var(--bg-gradient), url(../images/hero-mobile-2x.jpeg);
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    background-image: var(--bg-gradient), url(../images/hero-tablet.jpeg);
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: var(--bg-gradient), url(../images/hero-tablet-2x.jpeg);
+  }
 }
 @media screen and (min-width: 1200px) {
   .hero {
     min-width: 1200px;
     padding-top: 200px;
     padding-bottom: 200px;
+    background-image: var(--bg-gradient), url(../images/hero-bg.jpeg);
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: var(--bg-gradient), url(../images/hero-bg-2x.jpeg);
   }
 }
 
@@ -854,10 +880,11 @@ img {
 }
 
 .img-section {
-  padding: 60px 0;
+  display: none;
 }
 @media screen and (min-width: 1200px) {
   .img-section {
+    display: contents;
     padding-top: 94px;
   }
 }
@@ -883,12 +910,6 @@ img {
     flex-basis: calc((100% - 60px) / 3);
   }
 }
-@media screen and (min-width: 1200px) {
-  .img-section__list {
-    flex-basis: calc((100% - 60px) / 3);
-  }
-}
-
 .img-section__position > .img-section__label {
   position: absolute;
   bottom: 0;
