--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -2,6 +2,11 @@
 /* header navigation options (налаштування шапки) */
 .topbar {
   border-bottom: 1px solid #ececec;
+  display: none;
+
+  @include tablet {
+    display: contents;
+  }
 }
 
 .topbar-flex {
@@ -74,7 +79,7 @@
     height: 4px;
     background-color: var(--text-hover-color);
     border-radius: 2px;
-    @include desktop{
+    @include desktop {
       bottom: 3px;
       left: -3px;
     }
