--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,28 +1,36 @@
 // * налаштування тексту в variables.scss //
 .hero {
   background-color: var(--background-color-additional);
-  background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url(../images/hero-bg.jpeg);
+  background-image: var(--bg-gradient), url(../images/hero-mobile.jpeg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  /*   padding-top: 200px;
-  padding-bottom: 200px; */
 
-  padding: 118px 0;
+  @include retina {
+    background-image: var(--bg-gradient), url(../images/hero-mobile-2x.jpeg);
+  }
+
+  padding: 118px 60px;
   @include mobile {
   }
 
   @include tablet {
+    background-image: var(--bg-gradient), url(../images/hero-tablet.jpeg);
+
+    @include retina {
+      background-image: var(--bg-gradient), url(../images/hero-tablet-2x.jpeg);
+    }
   }
 
   @include desktop {
     min-width: 1200px;
     padding-top: 200px;
     padding-bottom: 200px;
+    background-image: var(--bg-gradient), url(../images/hero-bg.jpeg);
+
+    @include retina {
+      background-image: var(--bg-gradient), url(../images/hero-bg-2x.jpeg);
+    }
   }
 }
 
