--- a/sass/layouts/_img-section.scss
+++ b/sass/layouts/_img-section.scss
@@ -1,7 +1,8 @@
 .img-section {
-  padding: 60px 0;
+  display: none;
 
   @include desktop {
+    display: contents;
     padding-top: 94px;
   }
 }
@@ -26,7 +27,6 @@
   }
 
   @include desktop {
-    flex-basis: calc((100% - 60px) / 3);
   }
 }
 
