--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -34,8 +34,9 @@
 // * hero font
 .hero-title {
   color: var(--additional-text-color);
+  width: 290px;
   font-weight: 900;
-  font-size: 26px;
+  font-size: 20px;
   line-height: 1.6;
   text-align: center;
   letter-spacing: 0.06em;
@@ -44,6 +45,7 @@
   @include mobile {
     width: 360px;
     height: 84px;
+    font-size: 26px;
   }
 
   @include desktop {
