--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -6,12 +6,13 @@
   background-position: center;
   background-size: cover;
 
-  @include retina {
+  /* @include retina {
     background-image: var(--bg-gradient), url(../images/hero-mobile-2x.jpeg);
-  }
+  } */
 
-  padding: 118px 60px;
+  padding: 118px 0;
   @include mobile {
+    background-image: var(--bg-gradient), url(../images/hero-mobile-2x.jpeg);
   }
 
   @include tablet {
