--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -31,12 +31,51 @@
   color: var(--paragraph-tex-color);
 }
 
+.mobile-nav__link,
+.mobile-contacts__tel,
+.mobile-contacts__mail,
+.mobile-social__link {
+  font-weight: 500;
+  letter-spacing: 0.02em;
+}
+
+.mobile-nav__link,
+.mobile-contacts__tel {
+  font-size: 29px;
+  line-height: 1.17;
+  @include mobile {
+    font-size: 40px;
+  }
+}
+
 .mobile-nav__link {
   color: var(--primery-text-color);
-  font-weight: 500;
-  font-size: 40px;
-  line-height: 1.17;
-  letter-spacing: 0.02em;
+  &:hover,
+  &:focus {
+    color: var(--text-hover-color);
+  }
+}
+
+.mobile-contacts__tel {
+  color: var(--text-hover-color);
+}
+
+.mobile-contacts__mail {
+  color: var(--paragraph-tex-color);
+  font-size: 20px;
+  line-height: 1.16;
+  @include mobile {
+    font-size: 24px;
+  }
+}
+
+.mobile-social__link {
+  color: var(--text-hover-color);
+  font-size: 11px;
+  line-height: 1.2;
+  @include mobile {
+    font-size: 18px;
+  }
 }
 
 // * hero font
