--- a/css/main.css
+++ b/css/main.css
@@ -880,6 +880,22 @@ img {
   background-color: var(--additional-text-color);
   padding-left: 40px;
   padding-bottom: 48px;
+  display: flex;
+}
+@media screen and (min-width: 768px) {
+  .mobile-menu {
+    display: none;
+  }
+}
+
+.mobile-active {
+  color: var(--text-hover-color);
+}
+
+.mobile-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .mobile-nav__list,
@@ -899,15 +915,7 @@ img {
   margin-top: 48px;
 }
 
-.mobile-contacts__list {
-  margin-top: 235px;
-}
-@media screen and (min-width: 480px) {
-  .mobile-contacts__list {
-    margin-top: 300px;
-  }
-}
-
+/* .mobile-nav__group {} */
 .mobile-social {
   display: flex;
   margin-top: 64px;
@@ -935,14 +943,6 @@ img {
   display: none;
 }
 
-/* .mobile-social__link::after{
-  position: absolute;
-  content: "";
-  width: 1px;
-  height: 22px;
-  background-color: rgba(33, 33, 33, 0.2);
-  right: -10px;
-} */
 .hero {
   background-color: var(--background-color-additional);
   background-image: var(--bg-gradient), url(../images/hero-mobile.jpeg);
