--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -175,6 +175,20 @@
   background-color: var(--additional-text-color);
   padding-left: 40px;
   padding-bottom: 48px;
+  display: flex;
+  @include tablet {
+    display: none;
+  }
+}
+
+.mobile-active {
+  color: var(--text-hover-color);
+}
+
+.mobile-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .mobile-nav__list,
@@ -194,15 +208,7 @@
   margin-top: 48px;
 }
 
-.mobile-nav__group {
-}
-
-.mobile-contacts__list {
-  margin-top: 235px;
-  @include mobile {
-    margin-top: 300px;
-  }
-}
+/* .mobile-nav__group {} */
 
 .mobile-social {
   display: flex;
@@ -229,12 +235,3 @@
 .mobile-social__item:last-child:after {
   display: none;
 }
-
-/* .mobile-social__link::after{
-  position: absolute;
-  content: "";
-  width: 1px;
-  height: 22px;
-  background-color: rgba(33, 33, 33, 0.2);
-  right: -10px;
-} */
