--- a/css/main.css
+++ b/css/main.css
@@ -351,6 +351,7 @@ img {
   width: 40px;
   height: 40px;
   margin-left: auto;
+  background-color: transparent;
 }
 .mobile-menu-btn:hover, .mobile-menu-btn:focus {
   fill: var(--text-hover-color);
@@ -369,6 +370,7 @@ img {
   width: 40px;
   height: 40px;
   fill: var(--paragraph-tex-color);
+  background-color: transparent;
   top: 10px;
   right: 18px;
 }
