--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -24,6 +24,7 @@
   width: 40px;
   height: 40px;
   margin-left: auto;
+  background-color: transparent;
 
   &:hover,
   &:focus {
@@ -42,6 +43,7 @@
   width: 40px;
   height: 40px;
   fill: var(--paragraph-tex-color);
+  background-color: transparent;
 
   top: 10px;
   right: 18px;
