update after mentor corection

--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -187,6 +187,7 @@
 
 .mobile-container {
   display: flex;
+  justify-content: baseline;
   flex-direction: column;
   justify-content: space-between;
 }
