--- a/sass/layouts/_img-section.scss
+++ b/sass/layouts/_img-section.scss
@@ -2,8 +2,8 @@
   display: none;
 
   @include desktop {
-    display: contents;
-    padding-top: 94px;
+    display: inherit;
+    padding-top: 0;
   }
 }
 
