--- a/sass/layouts/_partners.scss
+++ b/sass/layouts/_partners.scss
@@ -21,7 +21,7 @@
   box-sizing: border-box;
   border: 1px solid var(--social-main-color);
   border-radius: 4px;
-  width: 170px;
+  width: 210px;
   height: 92px;
   fill: var(--social-main-color);
 
@@ -31,14 +31,18 @@
     border: 1px solid var(--text-hover-color);
   }
 
-    flex-basis: calc((100% - 30px) / 2);
+  flex-basis: calc((100% - 30px) / 2);
 
   @include tablet {
     flex-basis: calc((100% - 60px) / 3);
+    width: 226px;
+    height: 92px;
   }
 
   @include desktop {
     flex-basis: calc((100% - 120px) / 6);
+    width: 170px;
+    height: 92px;
   }
 }
 
