--- a/css/main.css
+++ b/css/main.css
@@ -179,8 +179,20 @@
   }
 }
 
+@media screen and (min-width: 768px) {
+  .our-features-title,
+.img-section__label {
+    text-align: left;
+  }
+}
+
 .basement__subtitle {
   color: var(--additional-text-color);
+}
+@media screen and (min-width: 768px) {
+  .basement__subtitle {
+    text-align: center;
+  }
 }
 
 .our-features-text {
@@ -319,7 +331,7 @@ img {
 }
 @media screen and (min-width: 768px) {
   .container {
-    width: 720px;
+    width: 768px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -331,8 +343,9 @@ img {
 .main-button {
   background: var(--text-hover-color);
   cursor: pointer;
-  height: 50px;
-  width: 220px;
+  /* height: 50px;
+  width: 220px; */
+  padding: 10px 24px;
   border-radius: 4px;
   border-style: none;
   /* position */
@@ -352,6 +365,7 @@ img {
   height: 40px;
   margin-left: auto;
   background-color: transparent;
+  padding: 0;
 }
 .mobile-menu-btn:hover, .mobile-menu-btn:focus {
   fill: var(--text-hover-color);
@@ -372,7 +386,7 @@ img {
   fill: var(--paragraph-tex-color);
   background-color: transparent;
   top: 10px;
-  right: 18px;
+  right: 15px;
 }
 .mobile-menu-close:hover, .mobile-menu-close:focus {
   fill: var(--text-hover-color);
@@ -473,12 +487,25 @@ img {
 .partners-title {
   /* position */
   box-sizing: border-box;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .img-section-title,
+.our-team-title,
+.partners-title {
+    margin-bottom: 50px;
+  }
 }
 
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .backdrop {
@@ -894,6 +921,7 @@ img {
 
 .mobile-container {
   display: flex;
+  justify-content: baseline;
   flex-direction: column;
   justify-content: space-between;
 }
@@ -998,12 +1026,11 @@ img {
 
 /* -==================== our-features (текст під банером) ==================== */
 .our-features {
-  /*   padding: 94px 0; */
   padding: 60px 0;
 }
 @media screen and (min-width: 1200px) {
   .our-features {
-    padding-top: 94px;
+    padding: 94px 0;
   }
 }
 
@@ -1053,8 +1080,8 @@ img {
 }
 @media screen and (min-width: 1200px) {
   .img-section {
-    display: contents;
-    padding-top: 94px;
+    display: inherit;
+    padding-top: 0;
   }
 }
 
@@ -1169,7 +1196,7 @@ img {
   box-sizing: border-box;
   border: 1px solid var(--social-main-color);
   border-radius: 4px;
-  width: 170px;
+  width: 210px;
   height: 92px;
   fill: var(--social-main-color);
   flex-basis: calc((100% - 30px) / 2);
@@ -1181,11 +1208,15 @@ img {
 @media screen and (min-width: 768px) {
   .partners__link {
     flex-basis: calc((100% - 60px) / 3);
+    width: 226px;
+    height: 92px;
   }
 }
 @media screen and (min-width: 1200px) {
   .partners__link {
     flex-basis: calc((100% - 120px) / 6);
+    width: 170px;
+    height: 92px;
   }
 }
 
@@ -1212,6 +1243,7 @@ img {
   .basement-container {
     flex-direction: row;
     flex-wrap: wrap;
+    gap: none;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -1249,8 +1281,13 @@ img {
 /* footer social options (налаштування соц-мереж в підвалі) */
 .basement-social {
   display: block;
-  width: 206px;
+  /* width: 206px; */
   height: 80px;
+}
+@media screen and (min-width: 768px) {
+  .basement-social {
+    margin-left: 165px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .basement-social {
@@ -1265,6 +1302,11 @@ img {
 @media screen and (min-width: 480px) {
   .basement-submit {
     width: 450px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .basement-submit {
+    margin-top: 60px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -1321,21 +1363,12 @@ img {
   justify-content: center;
   align-items: center;
   max-width: 200px;
-  padding: 0 24px;
+  padding: 10px 28px;
   gap: 10px;
 }
 
 .basement-submit__icon {
   fill: var(--background-color-special);
-}
-
-.section {
-  padding: 60px 0;
-}
-@media screen and (min-width: 1200px) {
-  .section {
-    padding-top: 94px;
-  }
 }
 
 /* button list options (налаштування списка кнопок) */
