--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -3,8 +3,9 @@
 .main-button {
   background: var(--text-hover-color);
   cursor: pointer;
-  height: 50px;
-  width: 220px;
+  /* height: 50px;
+  width: 220px; */
+  padding: 10px 24px;
   border-radius: 4px;
   border-style: none;
   /* position */
@@ -25,6 +26,7 @@
   height: 40px;
   margin-left: auto;
   background-color: transparent;
+  padding: 0;
 
   &:hover,
   &:focus {
@@ -46,7 +48,7 @@
   background-color: transparent;
 
   top: 10px;
-  right: 18px;
+  right: 15px;
 
   &:hover,
   &:focus {
