--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -19,6 +19,7 @@
   @include tablet {
     flex-direction: row;
     flex-wrap: wrap;
+    gap: none;
   }
 
   @include desktop {
@@ -57,8 +58,12 @@
 /* footer social options (налаштування соц-мереж в підвалі) */
 .basement-social {
   display: block;
-  width: 206px;
+  /* width: 206px; */
   height: 80px;
+
+  @include tablet {
+    margin-left: 165px;
+  }
 
   @include desktop {
     margin-left: 70px;
@@ -75,6 +80,10 @@
 
   @include mobile {
     width: 450px;
+  }
+
+  @include tablet {
+    margin-top: 60px;
   }
 
   @include desktop {
@@ -130,7 +139,7 @@
   justify-content: center;
   align-items: center;
   max-width: 200px;
-  padding: 0 24px;
+  padding: 10px 28px;
   gap: 10px;
 }
 
