--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,4 +1,4 @@
-.container {
+/* .container {
   width: 100%;
   padding-left: 15px;
   padding-right: 15px;
@@ -10,6 +10,28 @@
 
   @include tablet {
     width: 768px;
+  }
+
+  @include desktop {
+    width: 1200px;
+  }
+} */
+.container {
+  width: 100%;
+  margin: 0 auto;
+  padding-left: 16px;
+  padding-right: 16px;
+
+  @include mobile {
+    width: 320px;
+    /* padding-left: 16px;
+    padding-right: 16px; */
+  }
+
+  @include tablet {
+    width: 768px;
+    padding-left: 40px;
+    padding-right: 40px;
   }
 
   @include desktop {
